Update button text for issuing CAs view in the template

--- a/trustpoint/templates/pki/cas/cas.html
+++ b/trustpoint/templates/pki/cas/cas.html
@@ -7,7 +7,7 @@
     <div class="card-header d-flex justify-content-between align-items-center">
         <h1>{% trans "Certificate Authorities" %}</h1>
         <a href="{% url 'pki:issuing_cas' %}" class="btn btn-outline-primary btn-sm">
-            {% trans "Issuing CAs View" %}
+            {% trans "Show Issuing CAs only" %}
         </a>
     </div>
     <div class="card-body text-start" style="overflow-y: auto; flex: 1;">
