--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -157,8 +157,16 @@
                 <tbody>
                     {% for cred in domain_credentials %}
                     <tr>
-                        <td>{{ cred.domain }}</td>
-                        <td>{{ cred.common_name }}</td>
+                        <td>
+                            <a href="{% url 'pki:domains-detail' cred.domain.pk %}">
+                                {{ cred.domain }}
+                            </a>
+                        </td>
+                        <td>
+                            <a href="{% url 'pki:certificate-detail' cred.credential.certificate.pk %}">
+                                {{ cred.common_name }}
+                            </a>
+                        </td>
                         <td>{{ cred.created_at }}</td>
                         <td>{{ cred.expiration_date }}</td>
                         <td>{{ cred.expires_in }}</td>
