--- a/trustpoint/templates/pki/owner_credentials/add.html
+++ b/trustpoint/templates/pki/owner_credentials/add.html
@@ -21,7 +21,7 @@
             </div>
             <div class="card-footer d-flex">
                 <div class="tp-card-btn-footer m-1">
-                    <a href="{% url 'pki:owner_credentials' %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
+                    <button type="button" value="Back" class="btn btn-secondary" onClick="history.back()">{% trans 'Cancel' %}</button>
                     <button type="submit" class="btn btn-primary">{% trans 'Add new DevOwnerID' %}</button>
                 </div>
             </div>
