--- a/trustpoint/templates/devices/create_choose_onboarding.html
+++ b/trustpoint/templates/devices/create_choose_onboarding.html
@@ -14,12 +14,10 @@
         </div>
 
         <div class="card-body py-3">
-            <h2 class="d-inline-block">Choose Onboarding Mechanism</h2>
-
             <div class="d-flex gap-3 mt-3">
-                <div class="card flex-fill d-flex flex-column">
+                <div class="card d-flex flex-column" style="max-width: 400px; width: 100%;">
                     <div class="card-body d-flex flex-column">
-                        <h5 class="card-title"><strong>Use Onboarding (Recommended)</strong></h5>
+                        <h5 class="card-title"><strong>Use Onboarding</strong></h5>
                         <hr class="hr-m">
                         <p class="card-text flex-grow-1">If a domain credential shall be issued that will in turn be used for authentication, please choose Onboarding.</p>
                         <a href="{% url use_onboarding_url %}" class="btn btn-primary mt-auto w-100" style="max-width: 250px; margin-left: auto; margin-right: auto;">
@@ -28,7 +26,7 @@
                     </div>
                 </div>
                 {% if use_no_onboarding_url %}
-                <div class="card flex-fill d-flex flex-column">
+                <div class="card d-flex flex-column" style="max-width: 400px; width: 100%;">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title"><strong>Do not use onboarding</strong></h5>
                         <hr class="hr-m">
