--- a/trustpoint/templates/pki/owner_credentials/add.html
+++ b/trustpoint/templates/pki/owner_credentials/add.html
@@ -22,7 +22,9 @@
             <div class="card-footer d-flex">
                 <div class="tp-card-btn-footer m-1">
                     <button type="button" value="Back" class="btn btn-secondary" onClick="history.back()">{% trans 'Cancel' %}</button>
-                    <button type="submit" class="btn btn-primary">{% trans 'Add new DevOwnerID' %}</button>
+                    <button type="submit" name="action" value="add_only" class="btn btn-primary">{% trans 'Add DevOwnerID' %}</button>
+                    <button type="submit" name="action" value="add_with_truststore" class="btn btn-primary">{% trans 'DevOwnerID with Truststore' %}</button>
+
                 </div>
             </div>
         </div>
