--- a/trustpoint/templates/devices/create_choose_onboarding.html
+++ b/trustpoint/templates/devices/create_choose_onboarding.html
@@ -37,6 +37,18 @@
                     </div>
                 </div>
                 {% endif %}
+                {% if show_opc_ua_gds_push_option %}
+                <div class="card d-flex flex-column" style="max-width: 400px; width: 100%;">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title"><strong>OPC UA GDS Push</strong></h5>
+                        <hr class="hr-m">
+                        <p class="card-text flex-grow-1">For OPC UA devices that support GDS Push for automated certificate management and trust list updates.</p>
+                        <a href="{% url use_opc_ua_gds_push_url %}" class="btn btn-primary mt-auto w-100" style="max-width: 250px; margin-left: auto; margin-right: auto;">
+                            OPC UA GDS Push
+                        </a>
+                    </div>
+                </div>
+                {% endif %}
             </div>
         </div>
 
