small improvements on UI / UX

--- a/trustpoint/templates/management/tls.html
+++ b/trustpoint/templates/management/tls.html
@@ -88,7 +88,7 @@
           </tr>
           {% empty %}
           <tr>
-              <td colspan="11" class="middle">{% trans 'No certificates are available. Add an Issuing CA first.' %}</td>
+              <td colspan="11" class="middle">{% trans 'No TLS certificates are available. Add or generate one first.' %}</td>
           </tr>
           {% endfor %}
         </tbody>
