--- a/trustpoint/templates/pki/cert_profiles/includes/profile-builder-sidebar.html
+++ b/trustpoint/templates/pki/cert_profiles/includes/profile-builder-sidebar.html
@@ -1,6 +1,6 @@
 <div id="profile-builder-sidebar" class="tp-pb-sidebar">
   <div class="tp-pb-header">
-    <span class="tp-pb-title">Variables (Ctrl+K)</span>
+    <span class="tp-pb-title">Insert Fields Needed In Cert</span>
     <button type="button" class="tp-pb-close" data-pb-close>×</button>
   </div>
 
@@ -14,10 +14,10 @@
   </div>
 
   <div id="profile-builder-fields" class="tp-pb-fields">
-    <!-- we’ll fill this later with field buttons -->
+
   </div>
 
   <div class="tp-pb-footer">
-    Press <kbd>Ctrl+K</kbd> to toggle • <kbd>Esc</kbd> to close • Click field to insert
+    Press <kbd>Ctrl+K</kbd> to toggle  <kbd>Esc</kbd> to close
   </div>
 </div>
